# test-tinyusb-pico

./: CMakeLists.txt  desc.cpp  main.cpp  msc.cpp
src-override/pico-sdk/: reset_interface.c  tusb_config.h  usb.cpp
src-override/pico-sdk/pico/: stdio_usb.h
